added style and class to h2 and the embedded video

--- a/myfirsthtml.html
+++ b/myfirsthtml.html
@@ -14,10 +14,10 @@
     <br>
     <h1>Potatoes are great, everyone loves them.</h1>
       <!--potatoes are life vid-->
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/QiqqC_fbP1c" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/QiqqC_fbP1c" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="tube"></iframe>
 
-    <h2>SEE!!</h2>
-
+    <h2 class="see">SEE!!</h2>
+    <br>
     <h3>But why does everyone love potatoes so much!?</h3>
 
     <ul>
